# log-sentinel

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: sample_report.json  sample_report.md
src/log_sentinel/: __init__.py  cli.py  detectors.py  parsers.py  report.py
tests/: test_detector.py  test_parser.py
